<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypattern="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>darar_swarm</name>
  <version>1.0.0</version>
  <description>ROS 2 Jazzy & Gazebo Integration for DARAR Swarm</description>
  <maintainer email="user@todo.todo">DARAR Dev Team</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
